examples/test/testpolicy9233.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9233
  namespace: namespace106
spec:
  podSelector:
    matchLabels:
      key27: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value30
          key26: value8
      podSelector:
        matchLabels:
          key15: value11
          key20: value0
